# cfg

./: Cargo.toml  README.md  parse-tree.txt
cfg/: Cargo.toml
cfg-core/: Cargo.toml
cfg-core/src/: cnf.rs  interpret.rs  lib.rs  parse.rs  parsing.rs
cfg-core/src/cnf/: eliminate_epsilon_rules.rs  eliminate_long_rules.rs  eliminate_nonsolitary_terminals.rs  eliminate_unit_rules.rs  weak_cnf.rs
cfg-core/src/parse/: cyk.rs  earley.rs
cfg-core/src/parsing/: cyk.rs  earley.rs
cfg-macros/: Cargo.toml
cfg-macros/src/: lib.rs  parse.rs  to_tokens.rs
cfg/examples/: calculator.rs  english.rs  expression-cyk.rs  expression-earley.rs  format-parse-tree.rs  parse-expr-with-earley.rs  parse-tree-formatting.rs
cfg/src/: lib.rs
cfg/tests/: cnf_test.rs  cyk_parser_test_tests.rs  earley_parser_test_tests.rs  test_cases.rs
examples/english/: Cargo.toml
examples/english/src/: main.rs
examples/expression/: Cargo.toml
examples/expression-cyk/: Cargo.toml
examples/expression-cyk/src/: main.rs
examples/expression-earley/: Cargo.toml
examples/expression-earley/src/: main.rs
examples/expression/src/: main.rs
examples/parse-tree-formatting/: Cargo.toml
examples/parse-tree-formatting/src/: main.rs
