[package]
name = "cfg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-core = { path = "../cfg-core" }
cfg-macros = { path = "../cfg-macros" }

[[test]]
name = "tests"
path = "tests/cnf_test.rs"
